log
Tue 14 May 2024 03:34:12 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  2|4
total_score: 15/70
28438e6
Tue 14 May 2024 03:45:42 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:11: error: unused variable ‘count’ [-Werror=unused-variable]
   48 |       int count = 0;
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
682b7a2
Tue 14 May 2024 03:45:49 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
2015935
Tue 14 May 2024 03:51:01 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
41cb2a1
Thu 16 May 2024 12:14:06 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
798fa9f
Thu 16 May 2024 12:15:44 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5b5160c
Thu 16 May 2024 12:16:47 AM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  5|3
total_score: 35/70
43e4037
Thu 16 May 2024 12:18:56 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
c94aa0a
Thu 16 May 2024 12:19:21 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0759507
Thu 16 May 2024 12:23:15 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
c37cd70
Thu 16 May 2024 12:23:28 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
fdbccbc
Thu 16 May 2024 12:38:58 AM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
4cfb792
Thu 16 May 2024 08:45:36 PM UTC: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++++-----
 1 file changed, 32 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
96106ba
Thu 16 May 2024 08:46:39 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
495d20c
Thu 16 May 2024 08:48:47 PM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
03f72ac
Thu 16 May 2024 08:53:38 PM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
708c870
Thu 16 May 2024 08:55:25 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|4
total_score: 10/70
944ee34
Thu 16 May 2024 08:55:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
733bf2b
Thu 16 May 2024 08:58:09 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6becd84
Thu 16 May 2024 09:00:56 PM UTC: 
 sudoku.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  6|2
total_score: 45/70
a105e71
Thu 16 May 2024 09:08:19 PM UTC: 
 sudoku.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  6|2
total_score: 45/70
62ae0ed
Thu 16 May 2024 09:08:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
025211d
Thu 16 May 2024 09:09:25 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
c4fe7ac
Thu 16 May 2024 09:10:26 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|2
total_score: 45/70
3a8965f
Thu 16 May 2024 09:11:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ea9ab1e
Thu 16 May 2024 09:15:24 PM UTC: 
 sudoku.c | 35 ++++++++++++++++-------------------
 1 file changed, 16 insertions(+), 19 deletions(-)
 tests:  1|4
total_score: 10/70
2e5732a
Thu 16 May 2024 09:15:52 PM UTC: 
 sudoku.c | 35 +++++++++++++++++++----------------
 1 file changed, 19 insertions(+), 16 deletions(-)
 tests:  6|2
total_score: 45/70
734e45c
